Tailwind: Start Navbar

--- a/public/index.html
+++ b/public/index.html
@@ -10,7 +10,7 @@
     <title>NookDIY</title>
     <link rel="preconnect" href="https://fonts.gstatic.com">
     <link href="https://fonts.googleapis.com/css2?family=Nunito:wght@300;600;800&display=swap" rel="stylesheet">
-    <link rel="stylesheet" href="https://unpkg.com/mustard-ui@latest/dist/css/mustard-ui.min.css">
+    <!-- <link rel="stylesheet" href="https://unpkg.com/mustard-ui@latest/dist/css/mustard-ui.min.css"> -->
   </head>
   <body style="background-color: #e6dfc4;">
     <noscript>
