Prelaunch: Craft Page (#1)
* Add dynamic colors to recipe cards

- update ETL to change json keys to be lowercase
- add NaN support to ETL by forcing "NaN" string
- create diyrecipe-COLOR classes to correspond to colors.json

* Add button to remove MenuItems

* Remove potential duplicates in Nookipedia API results

* Correct dotenv for ETL installation

* Correct base-filtering logic and add 'exact match' filter flag

* Install (NOT implement) SimpleBar

* Tailwind: Start Navbar

* Complete Header Tailwind conversion

* CraftPage: Mobile temp unavailable complete

* Convert CraftPage.Recipes to Tailwind

* Add HD breakpoint for navbar

* Correct row column spacing issue on filter

* Add brown colors to theme

* hard set width of recipes

* convert CraftPage.Menu to Tailwind

* Add loading animation while fetching API data

* add Tooltip to CraftPage

* Disable PLAN for launch

* Add ItemFocus view

* Add fishing as source of DIY

* correct darkest brown to be yellow instead of red

* add simplebar to recipes -- unstyled & not overloading page bar

* Finish SimpleBar integration

--- a/public/index.html
+++ b/public/index.html
@@ -10,9 +10,9 @@
     <title>NookDIY</title>
     <link rel="preconnect" href="https://fonts.gstatic.com">
     <link href="https://fonts.googleapis.com/css2?family=Nunito:wght@300;600;800&display=swap" rel="stylesheet">
-    <link rel="stylesheet" href="https://unpkg.com/mustard-ui@latest/dist/css/mustard-ui.min.css">
+    <!-- <link rel="stylesheet" href="https://unpkg.com/mustard-ui@latest/dist/css/mustard-ui.min.css"> -->
   </head>
-  <body style="background-color: #e6dfc4;">
+  <body class="bg-brown-300">
     <noscript>
       I'm sorry, but you need to enable JavaScript to use this website.
       Je suis desolée, mais vous avez besoin de activer Javascript si vous voulez visiter ce site web-çi.
