--- a/public/index.html
+++ b/public/index.html
@@ -10,7 +10,7 @@
     <title>NookDIY</title>
     <link rel="preconnect" href="https://fonts.gstatic.com">
     <link href="https://fonts.googleapis.com/css2?family=Nunito:wght@300;600;800&display=swap" rel="stylesheet">
-    <!-- <link rel="stylesheet" href="https://unpkg.com/mustard-ui@latest/dist/css/mustard-ui.min.css"> -->
+    <link rel=”manifest” href=”%PUBLIC_URL%/manifest.json”>
   </head>
   <body class="bg-brown-300">
     <noscript>
