BUGFIX: Broken app bg color and allowing null entries on Menu

--- a/public/index.html
+++ b/public/index.html
@@ -1,25 +1,25 @@
 <!DOCTYPE html>
 <html>
-  <head>
-    <meta charset="utf-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1" />
-    <meta
-      name="description"
-      content="Web site created using create-react-app"
-    />
-    <title>NookDIY</title>
-    <link rel="preconnect" href="https://fonts.gstatic.com">
-    <link href="https://fonts.googleapis.com/css2?family=Nunito:wght@300;600;800&display=swap" rel="stylesheet">
-    <link rel=”manifest” href=”%PUBLIC_URL%/manifest.json”>
-  </head>
-  <body class="bg-brown-300">
-    <noscript>
-      I'm sorry, but you need to enable JavaScript to use this website.
-      Je suis desolée, mais vous avez besoin de activer Javascript si vous voulez visiter ce site web-çi.
-      Entschuldigung! Ihr mussen JavaScript aktiviert wenn ihr diesen Site sehen wollen.
-    </noscript>
-    <div id="root"></div>
-    <!--
+    <head>
+        <meta charset="utf-8" />
+        <meta name="viewport" content="width=device-width, initial-scale=1" />
+        <meta name="description" content="Web site created using create-react-app" />
+        <title>NookDIY</title>
+        <link rel="preconnect" href="https://fonts.gstatic.com" />
+        <link
+            href="https://fonts.googleapis.com/css2?family=Nunito:wght@300;600;800&display=swap"
+            rel="stylesheet"
+        />
+        <link rel=”manifest” href=”%PUBLIC_URL%/manifest.json”>
+    </head>
+    <body>
+        <noscript>
+            I'm sorry, but you need to enable JavaScript to use this website. Je suis desolée, mais
+            vous avez besoin de activer Javascript si vous voulez visiter ce site web-çi.
+            Entschuldigung! Ihr mussen JavaScript aktiviert wenn ihr diesen Site sehen wollen.
+        </noscript>
+        <div id="root"></div>
+        <!--
       This HTML file is a template.
       If you open it directly in the browser, you will see an empty page.
 
@@ -28,6 +28,5 @@
 
       To begin the development, run `npm start` or `yarn start`.
       To create a production bundle, use `npm run build` or `yarn build`.
-    -->
-  </body>
+    --></body>
 </html>
